更新.gitignore以忽略更多Unreal Engine生成文件
添加了对/DerivedDataCache、/Intermediate、/Saved和/.vscode目录的忽略规则，
以避免将不必要的大型生成文件推送到远程仓库。

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ DerivedDataCache/
 # 非必须的大型资源文件
 Content/StarterContent/
 Content/Collections/
+/DerivedDataCache
+/Intermediate
+/Saved
+/.vscode
 
 # 日志文件
 *.log
