--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,32 +1,48 @@
+; 功能描述： 定义项目使用的 Gameplay Tags。
+;            这些标签用于标识能力、状态、事件和数据。
+; 结构：
+; - [/Script/GameplayTags.GameplayTagsSettings]：配置 Gameplay Tag 系统设置。
+; - +GameplayTagList=(Tag="...",DevComment="...")：添加具体的 Gameplay Tag。
+
 [/Script/GameplayTags.GameplayTagsSettings]
-ImportTagsFromConfig=True
-WarnOnInvalidTags=True
-ClearInvalidTags=False
-AllowEditorTagUnloading=True
-AllowGameTagUnloading=False
-FastReplication=False
-InvalidTagCharacters="\"\',"
-NumBitsForContainerSize=6
-NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="Ability.Action.BaseAttack.1",DevComment="")
-+GameplayTagList=(Tag="Ability.Action.BaseAttack.2",DevComment="")
-+GameplayTagList=(Tag="AI.State.Idle",DevComment="AI is idle, not actively doing anything.")
-+GameplayTagList=(Tag="AI.State.Patrolling",DevComment="AI is moving along a patrol route.")
-+GameplayTagList=(Tag="AI.State.Chasing",DevComment="AI is actively pursuing a target.")
-+GameplayTagList=(Tag="AI.State.Attacking",DevComment="AI is in range and attempting to attack a target.")
-+GameplayTagList=(Tag="AI.State.Returning",DevComment="AI has lost its target and is returning to its home location.")
-+GameplayTagList=(Tag="AI.State.Searching",DevComment="AI has lost its target and is searching the last known area.")
-+GameplayTagList=(Tag="AI.State.Dead",DevComment="AI character is dead.")
-+GameplayTagList=(Tag="AI.State.HitReaction",DevComment="AI is playing a hit reaction animation.")
-+GameplayTagList=(Tag="AI.State.Stunned",DevComment="AI is stunned and cannot act.")
-+GameplayTagList=(Tag="Player.State.DamageImmune",DevComment="Player is immune to damage (e.g., during roll).")
-+GameplayTagList=(Tag="Ability.Action.MeleeAttack",DevComment="Tag for the melee attack ability.")
-+GameplayTagList=(Tag="Ability.Action.RangedAttack",DevComment="Tag for the ranged attack ability.")
-+GameplayTagList=(Tag="Event.Montage.EndAbility",DevComment="Event sent from montage notify to end the ability.")
-+GameplayTagList=(Tag="Event.Damage.HitReact",DevComment="Event tag to trigger hit reaction.")
-+GameplayTagList=(Tag="Data.Damage",DevComment="Tag used by SetByCaller for damage value in damage GE.")
-+GameplayTagList=(Tag="Data.Health.Initial",DevComment="Tag used by SetByCaller for initial health value.")
-+GameplayTagList=(Tag="Data.MaxHealth.Initial",DevComment="Tag used by SetByCaller for initial max health value.")
-+GameplayTagList=(Tag="Data.AttackPower.Initial",DevComment="Tag used by SetByCaller for initial attack power value.")
-+GameplayTagList=(Tag="Data.Defense.Initial",DevComment="Tag used by SetByCaller for initial defense value.")
+ImportTagsFromConfig=True       ; 从配置文件导入标签
+WarnOnInvalidTags=True          ; 对无效标签发出警告
+ClearInvalidTags=False          ; 不清除无效标签
+AllowEditorTagUnloading=True    ; 允许编辑器卸载标签
+AllowGameTagUnloading=False     ; 不允许游戏卸载标签
+FastReplication=False           ; 禁用快速复制（可能影响性能，但更稳定）
+InvalidTagCharacters="\"\',"     ; 定义无效的标签字符
+NumBitsForContainerSize=6       ; 用于容器大小的位数
+NetIndexFirstBitSegment=16      ; 网络索引的第一个位段
+
+; --- 能力相关标签 ---
++GameplayTagList=(Tag="Ability.Action.BaseAttack.1",DevComment="基础攻击第一段")
++GameplayTagList=(Tag="Ability.Action.BaseAttack.2",DevComment="基础攻击第二段")
++GameplayTagList=(Tag="Ability.Action.MeleeAttack",DevComment="近战攻击能力标签")
++GameplayTagList=(Tag="Ability.Action.RangedAttack",DevComment="远程攻击能力标签 (保留)")
+
+; --- AI 状态标签 ---
++GameplayTagList=(Tag="AI.State.Idle",DevComment="AI 待机状态")
++GameplayTagList=(Tag="AI.State.Patrolling",DevComment="AI 巡逻状态")
++GameplayTagList=(Tag="AI.State.Chasing",DevComment="AI 追击状态")
++GameplayTagList=(Tag="AI.State.Attacking",DevComment="AI 攻击状态")
++GameplayTagList=(Tag="AI.State.Returning",DevComment="AI 返回状态")
++GameplayTagList=(Tag="AI.State.Searching",DevComment="AI 搜索状态")
++GameplayTagList=(Tag="AI.State.Dead",DevComment="AI 死亡状态")
++GameplayTagList=(Tag="AI.State.HitReaction",DevComment="AI 受击反应状态")
++GameplayTagList=(Tag="AI.State.Stunned",DevComment="AI 眩晕状态 (无法行动)")
+
+; --- 玩家状态标签 ---
++GameplayTagList=(Tag="Player.State.DamageImmune",DevComment="玩家伤害免疫状态 (例如翻滚期间)")
+
+; --- 事件标签 ---
++GameplayTagList=(Tag="Event.Montage.EndAbility",DevComment="蒙太奇通知事件：结束能力")
++GameplayTagList=(Tag="Event.Damage.HitReact",DevComment="伤害事件：触发受击反应")
+
+; --- 数据标签 (用于 SetByCaller) ---
++GameplayTagList=(Tag="Data.Damage",DevComment="SetByCaller：伤害值")
++GameplayTagList=(Tag="Data.Health.Initial",DevComment="SetByCaller：初始生命值")
++GameplayTagList=(Tag="Data.MaxHealth.Initial",DevComment="SetByCaller：初始最大生命值")
++GameplayTagList=(Tag="Data.AttackPower.Initial",DevComment="SetByCaller：初始攻击力")
++GameplayTagList=(Tag="Data.Defense.Initial",DevComment="SetByCaller：初始防御力")
 
