AI框架最终更新，给AI添加了射线检测，射线检测使用插槽的方式检测，对其武器设置插槽即可，后期可以动态的调整范围匹配武器大小

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Action.AIAttack",DevComment="")
 +GameplayTagList=(Tag="Ability.Action.BaseAttack.1",DevComment="基础攻击第一段")
 +GameplayTagList=(Tag="Ability.Action.BaseAttack.2",DevComment="基础攻击第二段")
 +GameplayTagList=(Tag="Ability.Action.HeavyAttack",DevComment="")
@@ -37,4 +38,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Damage.HitReact",DevComment="伤害事件：触发受击反应")
 +GameplayTagList=(Tag="Event.Montage.EndAbility",DevComment="蒙太奇通知事件：结束能力")
 +GameplayTagList=(Tag="Player.State.DamageImmune",DevComment="玩家伤害免疫状态 (例如翻滚期间)")
++GameplayTagList=(Tag="State.HitReact",DevComment="表示目前是受击状态")
 
